feature : login form without css

--- a/src/style.css
+++ b/src/style.css
@@ -53,3 +53,16 @@ main {
 
     background-color: lightpink;
 }
+
+/* login form */
+
+fieldset {
+
+   flex: 15;
+
+    display: flex;
+
+    padding: 15px;
+
+    background-color: lightpink; 
+}
