--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,11 @@
 /*  Variables */
 :root {
-    --background-color: #f5f5f5;
+    --text-color: #120909;
+    --background-color: #fbf7f7;
+    --secondary-background-color: #f3efef;
+    --primary-color: #b36064;
+    --secondary-color: #d4c0a5;
+    --accent-color: #f64343;
 }
 
 /* Global Layout */
@@ -17,7 +22,7 @@ body {
     margin: 0;
     padding: 0;
 
-    font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", sans-serif;
     background-color: var(--background-color);
 }
 
@@ -55,4 +60,3 @@ main {
 }
 
 /* login page */
-
