feat: login page css

--- a/src/style.css
+++ b/src/style.css
@@ -48,6 +48,9 @@ header {
 
     background-color: orange;
 }
+    
+
+   
 
 main {
     flex: 15;
@@ -61,10 +64,86 @@ main {
 
 /* login page */
 
-#loginForm .label_nostyle{
-    background: none;
+#loginBody {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: var(--background-color);
+    min-height: 80dvh;
+}
+
+#loginForm {
+    border-radius: 10px;
+    background-color: var(--secondary-background-color);
+    height: 400px;
+}
+
+#loginForm h2 {
+    position: relative;
+    font-size: 25px;
+    text-align: center;
+    width: 100%;
+}
+
+#loginForm fieldset {
+    border: none;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+}
+
+#loginForm fieldset .inputBox input{
+    width: 80%;
+    height: 30px;
+    font-size: large;
+
+    
+}
+
+#loginForm fieldset .inputBox {
+    position: relative;
+    display: flex;
+    justify-content: center;
+}
+
+
+.inputBox i {
+    position: absolute;
+    right: 35px;
+    top: 30%;
+    color: var(--accent-color);
+}
+
+.center {
+    display: flex;
+    justify-content: center;
+}
+
+input[type="submit"]{
+    height: 50px;
+    font-size: large;
+    font-weight: bold;
+    border-radius: 10px;
+    background-color: var(--accent-color);
+    width: 50%;
+    color: white;
+    border-color: var(--accent-color);
 }
 
 #loginForm label {
-    color : var(--text-color);  
+    font-size: large;
+    font-weight: bold;
+    margin-left: 28px;
+}
+
+
+.logo{
+    margin-top: 40px;
+    margin-left: 500px;
+    width: 100%;
+}
+img {
+    height: 60px;
+    width: 60px;
 }
