--- a/src/style.css
+++ b/src/style.css
@@ -83,30 +83,29 @@ main {
 #loginForm {
     border-radius: 10px;
     background-color: var(--secondary-background-color);
-    height: 400px;
+    min-height: 500px;
+    min-width: 400px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 #loginForm h2 {
     position: relative;
-    font-size: 25px;
+    font-size: 30px;
     text-align: center;
     width: 100%;
+    margin: 20px 0px;
 }
 
-#loginForm fieldset {
-    border: none;
-    border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-}
-
-#loginForm fieldset .inputBox input {
-    width: 80%;
+#loginForm .inputBox input {
+    width: 85%;
     height: 30px;
     font-size: large;
 }
 
-#loginForm fieldset .inputBox {
+#loginForm .inputBox {
     position: relative;
     display: flex;
     justify-content: center;
@@ -147,7 +146,14 @@ main {
     top: 30px;
     left: 115px;
     width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
 }
+.logo h1 {
+    margin-left: 10px;
+}
+
 img {
     height: 60px;
     width: 60px;
