--- a/src/view/style.css
+++ b/src/view/style.css
@@ -1,12 +1,11 @@
 /*  Variables */
 :root {
     --background-color: #f5f5f5;
-    --text-color: #120909; 
+    --text-color: #120909;
     --secondary-background-color: #f3efef;
     --primary-color: #b36064;
     --secondary-color: #d4c0a5;
     --accent-color: #f64343;
-  
 }
 
 /* Global Layout */
@@ -19,18 +18,12 @@ body {
     min-width: 100dvw;
     min-height: 100dvh;
     width: 100%;
-    height:100%;
+    height: 100%;
     margin: 0;
     padding: 0;
 
-    font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", sans-serif;
     background-color: var(--background-color);
-}
-
-nav {
-    flex: 1;
-    min-width: 200px;
-    background-color:var(--background-color);
 }
 
 body > div {
@@ -60,97 +53,96 @@ main {
     background-color: lightpink;
 }
 
+.spacer {
+    flex: 1;
+}
+
 /* login page */
 
-.loginForm >body {
+.loginForm > body {
     background-color: var(#fbf7f7);
 }
 
-.loginForm  label {
+.loginForm label {
     color: #120909;
 }
 
 /*-----------------------------------------------------------------------------------------------*/
 
-/*body{
-    background: var(--background-color);
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-}*/
-
-/*-----------------------------------------------------------------------------------------------*/
-
-.sidebar{
-    background:var(--secondary-background-color);
-    top:2px;
-    position:fixed;
-    left:2px;
-    width:19.7%;
-    height:99%;
-    border-top-right-radius:15px;
-    border-bottom-right-radius:20px;
-    transition:0.3s ease-in-out;
-}
-
-/*-----------------------------------------------------------------------------------------------*/
-
-#content{
-    margin-top:10px;
-    position:absolute;
-    margin-left:20px;
-    width:90%;
-    height:80%;
-    background-color:var(--secondary-background-color);
-    transition:0.3s ease-in-out;
-    
-}
-
-/*-----------------------------------------------------------------------------------------------*/
-
-.button {
-    font-size:15px;
-    border: none;
-    display: flex;
-    align-items: center;
+nav {
+    flex: 1;
+    min-width: 300px;
     background-color: var(--secondary-background-color);
-    color: var(--text-color);
-    width: 240px;
-    height: 40px;
-    margin-bottom: 40px;
-    padding-left: 10px;
-    opacity:50%;
-    cursor: pointer;
-    text-align:justify;
-    text-indent: 33px;
-    transition: background-color 0.2s ease, border-radius 0.2s ease, border-width 0.2s ease, opacity 0.2s ease;
+    padding: 0;
+    margin: 0;
 }
 
-.button:hover {
+nav > form {
+    display: flex;
+    flex-direction: column;
+
+    width: 100%;
+    height: 100dvh;
+
+    transition: 0.3s ease-in-out;
+}
+
+nav > form > div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+
+    width: 100%;
+    height: 100%;
+}
+
+nav button {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+    border: none;
+    background-color: transparent;
+
+    width: 85%;
+    height: 65px;
+
+    margin: 15px 0;
+
+    font-size: 20px;
+    font-weight: 500;
+    cursor: pointer;
+
+    color: var(--text-color);
+    opacity: 80%;
+
+    transition: all 0.2s ease;
+}
+
+nav button:hover {
     background-color: #e7e7e7;
     border-radius: 30px;
     border-width: 25px;
     opacity: 1;
 }
 
-/*---------------------------------------------------------------------------------------------*/
-
-#deconnection{
-    margin-top:69%;
+nav button > svg {
+    margin: 13px;
+    width: 24px;
+    height: 24px;
 }
-#deconnection2{
-    margin-top:36%;
+
+nav button > p {
+    margin-right: 15px;
 }
 
 /*-----------------------------------------------------------------------------------------------*/
 
-svg{
-    height:18px;
-    width:20px;
-    margin-left:3px;
+svg {
+    height: 18px;
+    width: 20px;
+    /* margin-left: 3px; */
     color: var(--accent-color);
 }
 /*-----------------------------------------------------------------------------------------------*/
-
