--- a/src/view/style.css
+++ b/src/view/style.css
@@ -80,6 +80,8 @@ nav {
 nav > form {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
 
     width: 100%;
     height: 100dvh;
@@ -87,14 +89,12 @@ nav > form {
     transition: 0.3s ease-in-out;
 }
 
-nav > form > div {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-
-    width: 100%;
-    height: 100%;
+nav > form hr {
+    border: none;
+    border-top: 2px solid var(--accent-color);
+    border-radius: 5px;
+    width: 75%;
+    opacity: 60%;
 }
 
 nav button {
