--- a/src/style/global-style.css
+++ b/src/style/global-style.css
@@ -36,11 +36,29 @@ body > div {
 header {
     flex: 1;
 
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+
     min-height: 30px;
     max-height: 46px;
     padding: 5px 15px;
 
-    background-color: orange;
+    background-color: var(--background-color);
+
+    /* TODO: Change this */
+    color: var(--text-color);
+}
+
+header h1 {
+    font-size: 30px;
+    font-weight: bold;
+}
+
+header h1:nth-child(2) {
+    font-size: 25px;
+    font-weight: normal;
 }
 
 main {
@@ -57,16 +75,8 @@ main {
     flex: 1;
 }
 
-/* login page */
-
-.loginForm > body {
-    background-color: var(#fbf7f7);
-}
-
-.loginForm label {
-    color: #120909;
-}
-
+/*-----------------------------------------------------------------------------------------------*/
+/*                                      NAVIGATION BAR                                           */
 /*-----------------------------------------------------------------------------------------------*/
 
 nav {
