--- a/src/style/global-style.css
+++ b/src/style/global-style.css
@@ -336,15 +336,20 @@ svg {
 .calendar-event {
     background-color: var(--primary-color);
     color: white;
-    /* border-radius: 5px; */
-    padding: 5px;
-    margin: 2px;
+    padding: 0px !important;
     text-align: center;
+    width: 100%;
+    height: 100%;
+    position: relative;
 }
 
 /*-----------------------------------------------------------------------------------------------*/
 /*                                  ADVISOR PLANNING                                             */
 /*-----------------------------------------------------------------------------------------------*/
+
+#advisor-planning {
+    overflow-y: auto;
+}
 
 #advisor-planning > form {
     display: flex;
@@ -375,7 +380,7 @@ svg {
     border-bottom: 2px solid var(--primary-color);
 }
 
-#advisor-planning button {
+#advisor-planning .planning-nav {
     margin: 0 10px;
     padding: 5px 10px;
     border: none;
@@ -385,6 +390,19 @@ svg {
     cursor: pointer;
 }
 
-#advisor-planning button:hover {
+#advisor-planning .planning-nav:hover {
     background-color: var(--secondary-background-color);
+}
+
+#advisor-planning .calendar-event button {
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    color: white;
 }
