--- a/src/style/global-style.css
+++ b/src/style/global-style.css
@@ -307,3 +307,65 @@ svg {
     padding: 0;
     text-align: center;
 }
+
+
+
+
+/*-----------------------------------------------------------------------------------------------*/
+/*                                      OVERVIEW-CLIENT                                          */
+/*-----------------------------------------------------------------------------------------------*/
+
+
+#overview {
+    justify-content: space-between;
+    background-color: var(--secondary-background-color);
+    display: flex;
+    flex-wrap: wrap;
+    width:100%;
+    height:100%;
+}
+
+#overview > div {
+    display: flex;
+    flex-direction: column;
+    width: 48%;
+    margin-bottom: 15px;
+    box-sizing: border-box;
+}
+#overview >div  >p {
+    height:5%;
+}
+
+#overview > div > p > label {
+    display:flex;
+    float:left;
+    background-color: var(--primary-color);
+    color: #120909;
+    padding:5px 1% 5px 2%; 
+    box-sizing: border-box; 
+    width: 45%;
+    margin-left:5px; 
+}
+
+#overview > div > p > input {
+    display:flex;
+    flex-direction:column;
+    color: var(--text-color);
+    border-style: none;
+    background-color: #e8d2d2;
+    padding: 6px 1% 8px 2%; 
+    box-sizing: border-box; 
+    width: 45%; 
+}
+
+#overview > div  > button{
+  background-color: #e8d2d2;
+  width: 45%;
+  padding: 5px 1% 5px 2%;
+  margin-top: 5px;
+  margin-left: 47%;
+  display: flex;
+  flex-direction: row;
+    
+
+}
