--- a/src/style/global-style.css
+++ b/src/style/global-style.css
@@ -605,3 +605,82 @@ svg {
 #allContracts .space {
     width: 10px;
 }
+
+/*-----------------------------------------------------------------------------------------------*/
+/*                                      ADD EMPLOYE                                              */
+/*-----------------------------------------------------------------------------------------------*/
+
+#add-employe{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+
+#add-employe form{
+    background-color: var(--secondary-background-color);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#add-employe th {
+    width: 100%;
+    background-color: var(--primary-color);
+    color: white;
+}
+
+#add-employe table {
+    width: 1000px;
+}
+
+
+#add-employe td {
+    height: 50px;
+    font-size: large;
+    font-weight: bold;
+    
+}
+
+
+
+
+#add-employe td input {
+    width: 50%;
+    height: 30px;
+    font-size: large;
+    border-width: 1px;
+    margin-bottom: 10px;
+}
+
+#add-employe td select {
+    width: 50%;
+    height: 30px;
+    font-size: large;
+    border-width: 1px;
+    margin-bottom: 10px;
+}
+
+
+
+#add-employe .space {
+    width: 10px;
+    height: 20px;
+}
+
+#add-employe .buttons {
+    margin-top: 30px;
+
+}
+
+#add-employe .buttons button{
+    width: 140px;
+    height: 40px;
+    background-color: var(--primary-color);
+    color: white;
+    border-radius: 10px;
+    border-color: var(--primary-color);
+}
