--- a/src/style/global-style.css
+++ b/src/style/global-style.css
@@ -305,21 +305,19 @@ svg {
 #search-client td:last-child {
     padding: 0;
     text-align: center;
-
 }
 
 /*-----------------------------------------------------------------------------------------------*/
 /*                                      OVERVIEW-CLIENT                                          */
 /*-----------------------------------------------------------------------------------------------*/
 
-
 #overview {
     justify-content: space-between;
     background-color: var(--secondary-background-color);
     display: flex;
     flex-wrap: wrap;
-    width:100%;
-    height:100%;
+    width: 100%;
+    height: 100%;
 }
 
 #overview > div {
@@ -329,42 +327,40 @@ svg {
     margin-bottom: 15px;
     box-sizing: border-box;
 }
-#overview >div  >p {
-    height:5%;
+#overview > div > p {
+    height: 5%;
 }
 
 #overview > div > p > label {
-    display:flex;
-    float:left;
+    display: flex;
+    float: left;
     background-color: var(--primary-color);
     color: #120909;
-    padding:5px 1% 5px 2%; 
-    box-sizing: border-box; 
+    padding: 5px 1% 5px 2%;
+    box-sizing: border-box;
     width: 45%;
-    margin-left:5px; 
+    margin-left: 5px;
 }
 
 #overview > div > p > input {
-    display:flex;
-    flex-direction:column;
+    display: flex;
+    flex-direction: column;
     color: var(--text-color);
     border-style: none;
     background-color: #e8d2d2;
-    padding: 6px 1% 8px 2%; 
-    box-sizing: border-box; 
-    width: 45%; 
+    padding: 6px 1% 8px 2%;
+    box-sizing: border-box;
+    width: 45%;
 }
 
-#overview > div  > button{
-  background-color: #e8d2d2;
-  width: 45%;
-  padding: 5px 1% 5px 2%;
-  margin-top: 5px;
-  margin-left: 47%;
-  display: flex;
-  flex-direction: row;
-    
-
+#overview > div > button {
+    background-color: #e8d2d2;
+    width: 45%;
+    padding: 5px 1% 5px 2%;
+    margin-top: 5px;
+    margin-left: 47%;
+    display: flex;
+    flex-direction: row;
 }
 
 /*-----------------------------------------------------------------------------------------------*/
@@ -470,6 +466,28 @@ svg {
     top: 0;
     left: 0;
     color: white;
+}
+
+/* .td-with-delete-button:hover {
+    background-color: var(--secondary-background-color) !important;
+} */
+
+#advisor-planning .delete-button:hover strong {
+    color: transparent;
+}
+#advisor-planning .delete-button:hover {
+    font-size: 0;
+}
+
+#advisor-planning .delete-button svg {
+    color: var(--secondary-background-color);
+    display: none;
+}
+
+#advisor-planning .delete-button:hover svg {
+    display: inline-block;
+    width: 30px;
+    height: 30px;
 }
 
 #advisor-planning .calendar-event button:disabled {
@@ -636,4 +654,62 @@ svg {
 
     margin: 0;
     padding: 0;
+}
+
+#delete-event-modal {
+    display: flex;
+    width: 100%;
+    height: 100%;
+
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    opacity: 0;
+
+    pointer-events: none;
+
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.3);
+
+    align-items: center;
+    justify-content: center;
+}
+
+#delete-event-modal form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    width: 630px;
+    height: 195px;
+
+    background-color: var(--secondary-background-color);
+    border-radius: 5px;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+#delete-event-modal form > div {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#delete-event-modal button {
+    margin: 15px;
+    padding: 5px 10px;
+
+    width: 100px;
+    height: 40px;
+
+    border: none;
+    border-radius: 5px;
+    background-color: var(--primary-color);
+    box-sizing: border-box;
+    cursor: pointer;
+    color: white;
+    font-size: larger;
 }
