--- a/src/style/global-style.css
+++ b/src/style/global-style.css
@@ -938,3 +938,87 @@ svg {
     padding: 0;
 
 }
+
+/*-----------------------------------------------------------------------------------------------*/
+/*                                      MANAGE DOCUMENTS                                         */
+/*-----------------------------------------------------------------------------------------------*/
+
+
+
+
+#allDocuments{
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+
+#allDocuments .showDocuments {
+    background-color: var(--background-color);
+    width: 100%;
+}
+
+#allDocuments th {
+    width: 1000px;
+    background-color: var(--primary-color);
+    color: white;
+}  
+
+#allDocuments table {
+    background-color: var(--secondary-background-color);
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+
+}
+
+#allDocuments form{
+    width: 100%;
+}
+
+
+#allDocuments .account {
+    margin-top: 20px;
+
+}
+
+
+
+#allDocuments input[type="radio"]{
+    width: 50px;
+    height: 20px;
+    
+}
+
+#allDocuments th:last-child {
+    width: 80px;
+}
+
+#allDocuments .edit-Documents {
+    display: flex;
+    align-items: center;
+    justify-content: center;    
+    width: 100%;
+    margin-top: 100px;
+}
+
+#allDocuments .edit-Documents button {
+    width: 140px;
+    height: 40px;
+    background-color: var(--primary-color);
+    color: white;
+    border-radius: 10px;
+    border-color: var(--primary-color);
+}
+
+#allDocuments .edit-Documents input {
+  height: 40px;
+  font-size: large;
+}
+
+#allDocuments .space {
+    width: 10px;
+}
