--- a/src/style/global-style.css
+++ b/src/style/global-style.css
@@ -981,7 +981,7 @@ svg {
 
 #allDocuments table td input{
     border: none;
-    width: 90%;
+    width: 95%;
     font-size: medium;
     background-color: var(--secondary-background-color);
 }
@@ -997,15 +997,6 @@ svg {
     margin-top: 20px;
 
 }
-
-
-
-#allDocuments input[type="radio"]{
-    width: 50px;
-    height: 20px;
-    
-}
-
 
 
 #allDocuments .edit-documents-list {
@@ -1051,3 +1042,122 @@ svg {
     color: var(--primary-color);
 }
 
+
+#edit-doc-modal {
+    display: flex;
+    width: 100%;
+    height: 100%;
+
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    opacity: 0;
+
+    pointer-events: none;
+
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.3);
+
+    align-items: center;
+    justify-content: center;
+}
+
+#edit-doc-modal form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    width: 468px;
+    height: 400px;
+
+    background-color: var(--secondary-background-color);
+    border-radius: 5px;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+#edit-doc-modal form .form-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#edit-doc-modal form .form-content > div {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+#edit-doc-modal form .form-content > div > div {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+#edit-doc-modal form .inputs {
+    margin-top: 4px;
+}
+
+#edit-doc-modal form .inputs > * {
+    margin: 14px 30px;
+}
+
+#edit-doc-modal form .form-content input {
+    color: var(--text-color);
+}
+
+#edit-doc-modal .arrow-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#edit-doc-modal .arrow-container button {
+    border: none;
+    /* background-color: transparent; */
+    cursor: pointer;
+    margin: 0;
+    padding: 0;
+
+    width: 15px;
+    /* height: 10px; */
+}
+
+#edit-doc-modal .arrow-container svg {
+    color: var(--text-color);
+    opacity: 1;
+    width: 10px;
+    height: 10px;
+}
+
+#edit-doc-modal .label-containers p {
+    margin: 15px;
+    margin-left: 0;
+    font-size: large;
+}
+
+#edit-doc-modal .horizontal {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+#edit-doc-modal form > button {
+    margin-bottom: 37px;
+    padding: 5px 10px;
+    border: none;
+    border-radius: 5px;
+    background-color: var(--primary-color);
+    box-sizing: border-box;
+    cursor: pointer;
+    color: white;
+    font-size: larger;
+}
