--- a/src/style/global-style.css
+++ b/src/style/global-style.css
@@ -695,7 +695,7 @@ svg {
     width: 10px;
 }
 
-#add-contract-modal {
+#add-account-modal {
     display: flex;
     width: 100%;
     height: 100%;
