features accounts-contracts-agent version2

--- a/src/style/global-style.css
+++ b/src/style/global-style.css
@@ -645,7 +645,7 @@ svg {
 /*                                      OVERVIEW-CLIENT                                          */
 /*-----------------------------------------------------------------------------------------------*/
 
-#account-page {
+#account-details-page {
     justify-content: space-between;
     background-color: var(--secondary-background-color);
     display: flex;
@@ -654,18 +654,18 @@ svg {
     height: 100%;
     }
 
-#account-page > div {
+#account-details-page > div {
     display: flex;
     flex-direction: column;
     width: 48%;
     margin-bottom: 15px;
     box-sizing: border-box;
     }
-#account-page > div > p{
+#account-details-page > div > p{
     height:2%
 }
 
-#account-page > div >p> select {
+#account-details-page > div >p> select {
         color:var(--text-color) ;
         border-style: none;
         background-color:#e8d2d2 ;
@@ -675,7 +675,7 @@ svg {
         margin-bottom: 5px;
     }
 
-#account-page > div > p > input {
+#account-details-page > div > p > input {
     display:flex;
     flex-direction:column;
     color: var(--text-color);
@@ -688,13 +688,13 @@ svg {
 }
 
 
-#account-page > div > div {
+#account-details-page > div > div {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
 
-#account-page > div > p > button {
+#account-details-page > div > p > button {
     background-color: #e8d2d2;
     width: 45%;
     padding: 6px 1% 5px 2%;
@@ -705,7 +705,7 @@ svg {
     margin-bottom:5px;
 }
 
-#account-page > div > button {
+#account-details-page > div > button {
     background-color: #e8d2d2;
     width: 45%;
     padding: 6px 1% 5px 2%;
@@ -715,7 +715,7 @@ svg {
     margin-left:2px;
     margin-bottom:5px;
 }
-#account-page> div > p > label {
+#account-details-page> div > p > label {
     display:flex;
     float:left;
     background-color: var(--primary-color);
@@ -725,18 +725,19 @@ svg {
     width: 45%;
     margin-left:5px; 
 }
-#account-page > div > p > input[type="radio"] {
+#account-details-page > div > p > input[type="radio"] {
     display: contents;
     margin-bottom: 5px;
     width:4%;
 }
-#account-page > div > p > .positive-balance {
+#account-details-page > div > p > .positive-balance {
     color: green; /* Couleur du texte en vert pour un solde positif */
 }
 
-#account-page > div > p > .negative-balance {
+#account-details-page > div > p > .negative-balance {
     color: red; /* Couleur du texte en rouge pour un solde négatif */
 }
+
 
 
 /*-----------------*/
@@ -751,7 +752,7 @@ svg {
     height: 100%;
     }
 
-#contract-page > div {
+#contract-page  form > div {
     display: flex;
     flex-direction: column;
     width: 48%;
@@ -789,7 +790,9 @@ svg {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-}
+  }
+
+
 #contract-page> div > p > label {
     display:flex;
     float:left;
@@ -800,3 +803,32 @@ svg {
     width: 45%;
     margin-left:5px; 
 }
+
+
+
+#div-container {
+    display:grid;
+    grid-template-columns:repeat(2,1fr);
+    grid-template-rows:repeat(2,1fr);
+    height:100%;
+    width:100%;
+    row-gap:1%;
+    column-gap:1%;
+}
+#div-container .account-div{
+    border:2px solid var(--primary-color);
+    border-radius:10px;
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+    width:50%;
+    background-color: var(--secondary-background-color);
+
+}
+#div-container .information-div{
+    padding:7% 7% 7%  7%;
+    text-align:center;
+    width:90%;
+    background-color: var(--secondary-background-color);
+}
+
