--- a/src/style/global-style.css
+++ b/src/style/global-style.css
@@ -1669,6 +1669,12 @@ svg {
     width: 100%;
 }
 
+#allAccounts .advisor-accounts .buttons{
+    display: flex;
+    flex-direction: row;
+}
+
+
 #allAccounts .advisor-accounts table {
     width: 100%;
     display: flex;
@@ -1707,13 +1713,17 @@ svg {
     width: 300px;
 }
 
+#allAccounts .advisor-accounts td input[name="input-overdraft"]{
+    width: 100px;
+}
+
 
 #allAccounts .advisor-accounts td input[type="text"]:focus {
     outline: none;
 }
 
 #allAccounts .advisor-accounts td input[type="text"]:first-child {
-    width: 150px;
+    width: 100px;
 }
 
 #allAccounts .advisor-accounts button {
@@ -1836,6 +1846,151 @@ svg {
 }
 
 #edit-overdraft-modal form > button {
+    margin-bottom: 37px;
+    padding: 5px 10px;
+    border: none;
+    border-radius: 5px;
+    background-color: var(--primary-color);
+    box-sizing: border-box;
+    cursor: pointer;
+    color: white;
+    font-size: larger;
+}
+
+#allAccounts .advisor-accounts form button {
+    width: 140px;
+    height: 40px;
+    background-color: var(--primary-color);
+    color: white;
+    border-radius: 10px;
+    border-color: var(--primary-color);
+    margin-top: 20px;
+}
+
+#allAccounts .advisor-accounts form td button {
+    height: 30px;
+    margin-top: 0px;
+}
+
+
+#delete-modal {
+    display: flex;
+    width: 100%;
+    height: 100%;
+
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    opacity: 0;
+
+    pointer-events: none;
+
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.3);
+
+    align-items: center;
+    justify-content: center;
+}
+
+#delete-modal form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    width: 468px;
+    height: 400px;
+
+    background-color: var(--secondary-background-color);
+    border-radius: 5px;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+#delete-modal .form-content .label-containers{
+    width: 200px;
+}
+
+#delete-modal .form-content select{
+    width: 100px;
+}
+
+
+
+#delete-modal form .form-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#delete-modal form .form-content > div {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+#delete-modal form .form-content > div > div {
+    flex: 1;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+#delete-modal form .inputs {
+    margin-top: 4px;
+}
+
+#delete-modal form .inputs > * {
+    margin: 14px 30px;
+}
+
+#delete-modal form .form-content input {
+    color: var(--text-color);
+}
+
+#delete-modal .arrow-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#delete-modal .arrow-container button {
+    border: none;
+    /* background-color: transparent; */
+    cursor: pointer;
+    margin: 0;
+    padding: 0;
+
+    width: 15px;
+    /* height: 10px; */
+}
+
+#delete-modal .arrow-container svg {
+    color: var(--text-color);
+    opacity: 1;
+    width: 10px;
+    height: 10px;
+}
+
+#delete-modal .label-containers p {
+    margin: 15px;
+    margin-left: 0;
+    font-size: large;
+}
+
+#delete-modal .horizontal {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+#delete-modal form > button {
     margin-bottom: 37px;
     padding: 5px 10px;
     border: none;
