--- a/src/style/global-style.css
+++ b/src/style/global-style.css
@@ -1370,9 +1370,39 @@ svg {
 
 
 /*-----------------*/
+.contract-list-form{
+    display:grid;
+    grid-template-columns:repeat(2,1fr);
+    grid-template-rows:repeat(2,1fr);
+    height:100%;
+    width:100%;
+    row-gap:1%;
+    column-gap:1%;
+}
+.contract-list-form > div {
+    border:2px solid var(--primary-color);
+    border-radius:10px;
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+    height:50%;
+    width:50%;
+    background-color: var(--secondary-background-color);
+}
+.contract-list-form > div > div >div > button{
+    background-color: #e8d2d2;
+    width: 45%;
+    padding: 6px 1% 5px 2%;
+    margin-top: 2%;
+    display: flex;
+    flex-direction: row;
+    margin-left:28%;
+    margin-bottom:5px;
+    
+}
 
-
-#contract-page {
+/***********************/
+.contract-details-page {
     justify-content: space-between;
     background-color: var(--secondary-background-color);
     display: flex;
@@ -1381,18 +1411,18 @@ svg {
     height: 100%;
     }
 
-#contract-page > div {
+.contract-details-page > div {
     display: flex;
     flex-direction: column;
-    width: 48%;
+    width: 50%;
     margin-bottom: 15px;
     box-sizing: border-box;
     }
-#contract-page > div > p{
+.contract-details-page > div > p{
     height:2%
 }
 
-#contract-page > div >p> select {
+.contract-details-page > div > p> select {
         color:var(--text-color) ;
         border-style: none;
         background-color:#e8d2d2 ;
@@ -1402,7 +1432,7 @@ svg {
         margin-bottom: 5px;
     }
 
-#contract-page > div > p > input {
+.contract-details-page > div > p > input {
     display:flex;
     flex-direction:column;
     color: var(--text-color);
@@ -1414,15 +1444,13 @@ svg {
     margin-left:2px;
 }
 
-
-#contract-page > div > div {
+.contract-details-page > div > div {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
   }
 
-
-#contract-page> div > p > label {
+.contract-details-page  > div > p > label {
     display:flex;
     float:left;
     background-color: var(--primary-color);
@@ -1433,32 +1461,70 @@ svg {
     margin-left:5px; 
 }
 
+/*********************/
+.new-contract-page{
+justify-content: space-between;
+    background-color: var(--secondary-background-color);
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    height: 100%;
 
-
-#div-container {
-    display:grid;
-    grid-template-columns:repeat(2,1fr);
-    grid-template-rows:repeat(2,1fr);
-    height:100%;
-    width:100%;
-    row-gap:1%;
-    column-gap:1%;
 }
-#div-container .account-div{
-    border:2px solid var(--primary-color);
-    border-radius:10px;
+.new-contract-page > div {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    margin-bottom: 15px;
+    box-sizing: border-box;
+}
+
+.new-contract-page> div > p{
+        height:2%
+}
+
+.new-contract-page > div > p > label {
+    display:flex;
+    float:left;
+    background-color: var(--primary-color);
+    color: #120909;
+    padding:5px 1% 5px 2%; 
+    box-sizing: border-box; 
+    width: 45%;
+    margin-left:2px; 
+}
+
+.new-contract-page > div > p > input {
     display:flex;
     flex-direction:column;
-    justify-content:center;
-    width:50%;
-    background-color: var(--secondary-background-color);
-
+    color: var(--text-color);
+    border-style: none;
+    background-color: #e8d2d2;
+    padding: 6px 1% 8px 2%; 
+    box-sizing: border-box; 
+    width: 45%; 
+    margin-left:2px;
 }
-#div-container .information-div{
-    padding:7% 7% 7%  7%;
-    text-align:center;
-    width:90%;
-    background-color: var(--secondary-background-color);
+
+.new-contract-page > div > p> select {
+        color:var(--text-color) ;
+        border-style: none;
+        background-color:#e8d2d2 ;
+        padding: 6px 1% 8px 2%;
+        box-sizing: border-box;
+        width: 45%;
+        margin-bottom: 5px;
+        margin-left:1px;
+}
+.new-contract-page > div > button{
+    background-color: #e8d2d2;
+    width: 45%;
+    padding: 6px 1% 5px 2%;
+    margin-top: 2%;
+    display: flex;
+    flex-direction: row;
+    margin-left:2px;
+    margin-bottom:5px;
 }
 
 
